[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.3",
  "hatchling>=1.13",
]

[project]
name = "pytest-html"
description = "pytest plugin for generating HTML reports"
readme = "README.rst"
keywords = [
  "html",
  "pytest",
  "report",
]
license = "MPL-2.0"
authors = [
  { name = "Dave Hunt", email = "dhunt@mozilla.com" },
  { name = "Jim Brannlund", email = "jimbrannlund@fastmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]

dependencies = [
  "jinja2>=3",
  "pytest>=7",
  "pytest-metadata>=2",
]
optional-dependencies.docs = [
  "pip-tools>=6.13",
]
optional-dependencies.test = [
  "assertpy>=1.1",
  "beautifulsoup4>=4.11.1",
  "black>=22.1",
  "flake8>=4.0.1",
  "pre-commit>=2.17",
  "pytest-mock>=3.7",
  "pytest-rerunfailures>=11.1.2",
  "pytest-xdist>=2.4",
  "selenium>=4.3",
  "tox>=3.24.5",
]
urls.Homepage = "https://github.com/pytest-dev/pytest-html"
urls.Source = "https://github.com/pytest-dev/pytest-html"
urls.Tracker = "https://github.com/pytest-dev/pytest-html/issues"
entry-points.pytest11.html = "pytest_html.plugin"
entry-points.pytest11.html_fixtures = "pytest_html.fixtures"

[tool.hatch.envs.test]
features = [
  "test",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
exclude = [
  "src/pytest_html/scripts/*",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/pytest_html/__version.py"

[tool.hatch.build.hooks.custom]
path = "scripts/npm.py"
